2004-11-08  Matthias Clasen  <mclasen@redhat.com>

	* glib/gasyncqueue.[hc]:
	* glib/ghook.[hc]: 
	* glib/gmain.[hc]:
	* glib/giochannel.[hc]: Make g_io_channel_ref(), 
	g_main_context_ref(), g_hook_ref(), g_async_queue_ref()
	return the passed in pointer. (#151663, Manish Singh)

	* glib/gmain.c: Initialize child_watch_count to 1, so 
	that we don't miss the very first child if it exits 
	before we set up the child watch. In that case we had 
	previously source->count == child_watch_count == 0, 
	causing g_child_watch_check() to skip the waitpid() 
	call.  (#154827, Gustavo Carneiro)

	* glib/gmain.c (g_child_watch_source_init_single) 
	(g_child_watch_source_init_multi_threaded): Use sigaction()
	instead of signal().  (#136867, Jonas Jonsson, patch by
	Archana Shah)

2004-11-07  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.c (g_get_any_init): Work around an bug
	in Mac OS < 10.3.  (#156446, Dave MacLachlan)

2004-11-06  Tor Lillqvist  <tml@iki.fi>

	* glibconfig.h.win32.in: Cosmetics: move the G_GNUC_INTERNAL
	define to the same place where it is in a configure-generated
	glibconfig.h

2004-11-05  Matthias Clasen  <mclasen@redhat.com>

	* tests/strtod-test.c: Portability fixes and extra sanity
	checks.  (#157453, Morten Welinder)

2004-11-04  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstrfuncs.c (g_ascii_strtod): Handle numbers like
	1e1, nan, -infinity. Also try harder to preserve errno.  
	(#156421, Morten Welinder)

	* tests/strtod-test.c: Add testcases.

2004-11-04  Tor Lillqvist  <tml@iki.fi>

	* glib/goption.h (enum GOptionFlags): Add G_OPTION_FLAG_REVERSE,
	to reverse the sense of a G_OPTION_ARG_NONE (boolean) option.

	* glib/goption.c (parse_arg): Obey the above flag.

	* glib/gconvert.c (g_filename_display_name): Document that the
	result is guaranteed to be non-NULL.

	* glib/gfileutils.c (get_contents_stdio, get_contents_regfile,
	get_contents_posix, get_contents_win32, g_file_open_tmp,